# games101_assignment

pa0/: CMakeLists.txt  README.md  main.cpp
pa1/: CMakeLists.txt  Triangle.hpp  main.cpp
pa2/: main.cpp  rasterizer.cpp
pa3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
pa4/: main.cpp
